--- a/currency_exchange_project/pesa-exchange-frontend/pesa-exchange-ui/src/app/accounts/accounts.component.html
+++ b/currency_exchange_project/pesa-exchange-frontend/pesa-exchange-ui/src/app/accounts/accounts.component.html
@@ -7,24 +7,24 @@
        
         <p class="divider-text">
         </p>
-        <form>
+        <form class="form-signin" >
         <div class="form-group input-group">
-            <input name="" class="form-control" placeholder="Full name" type="text">
+            <input name="" class="form-control" placeholder="First name" name="fname" type="text" [(ngModel)]="firstName" >
         </div> <!-- form-group// -->
         <div class="form-group input-group">
-            <input name="" class="form-control" placeholder="Email address" type="email">
+            <input name="" class="form-control" placeholder="Last name" name="lname" type="text" [(ngModel)]="lastName">
         </div> <!-- form-group// -->
         <div class="form-group input-group">
-            <input name="" class="form-control" placeholder="Phone number" type="text">
+            <input name="" class="form-control" placeholder="Email address" name="email" type="email" [(ngModel)]="email">
         </div> <!-- form-group// -->
         <div class="form-group input-group">
-            <input class="form-control" placeholder="Create password" type="password">
+            <input class="form-control" placeholder="Create password" name="password2" type="password" [(ngModel)]="passWord">
         </div> <!-- form-group// -->
         <div class="form-group input-group">
-            <input class="form-control" placeholder="Repeat password" type="password">
+            <input class="form-control" placeholder="Repeat password"name="cpassword" type="password" [(ngModel)]="confirmPassword">
         </div> <!-- form-group// -->                                      
         <div class="form-group">
-            <button type="submit" class="btn btn-primary btn-block"> Create Account  </button>
+            <button type="submit"  class="btn btn-primary btn-block" (click)="registerNewUser()" type="submit"> Create Account  </button>
         </div> <!-- form-group// -->      
         <p class="text-center">Have an account? <a href="">Log In</a> </p>                                                                 
     </form>
