--- a/currency_exchange_project/pesa-exchange-frontend/pesa-exchange-ui/src/app/auth/auth.component.html
+++ b/currency_exchange_project/pesa-exchange-frontend/pesa-exchange-ui/src/app/auth/auth.component.html
@@ -2,7 +2,7 @@
     <form>
       <h4 class="mb-3 fw-normal">Please sign in</h4>
       <label for="inputPhoneNumber" class="visually-hidden">Phone Number</label>
-      <input type="text" id="inputPhoneNumber" name="Phone" [(ngModel)]="username"  class="form-control"  placeholder="Phone Number" required autofocus>
+      <input type="text" id="inputPhoneNumber" name="Phone" [(ngModel)]="email"  class="form-control"  placeholder="Email" required autofocus>
       <label for="inputPassword" class="visually-hidden">Password</label>
       <input type="password" id="inputPassword" name="password" [(ngModel)]="password" class="form-control" placeholder="Password" required>
       <div class="checkbox mb-3">
